yamls/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
spec:
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
