yamls/mysql-service.yaml
#service
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
